# my-personal-ai-employee

./: .env.example  .gitattributes  .gitignore  .mcp.json  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: ralph_stop.ps1  ralph_stop.sh
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md  Delegation_Protocol.md
AI_Employee_Vault/.obsidian/: app.json
AI_Employee_Vault/Accounting/: Current_Month.md
AI_Employee_Vault/Briefings/: 2026-04-13_Monday_Briefing.md
AI_Employee_Vault/Done/: EMAIL_harbor_outage_ack.md  EMAIL_meridian_renewal.md  FILE_q1_denials_csv_import.md  LINKEDIN_watchers_and_phi.md  PLAN_cedar_pilot_sow.md  SUBSCRIPTION_AUDIT_2026-04-12.md
deploy/cloud/: .env.cloud.example  Caddyfile  (+6 more)
docs/: architecture.md  demo_script.md  gmail_oauth_setup.md  lessons_learned.md  obs_setup.md  odoo_setup.md  platinum_deploy.md  preflight.md  production_guide.md
mcp_servers/: __init__.py  linkedin_poster.py
orchestrator/: __init__.py  approval_watcher.py  orchestrator.py  retry.py  watchdog.py
scripts/: bootstrap_odoo.ps1  build_demo_video.py  capture_linkedin_session.py  capture_whatsapp_session.py  cloud_agent.py  configure_obs.py  configure_obs_encoder.py  create_odoo_db.py  generate_narration.py  install_windows_tasks.ps1  platinum_demo.py  record_bootstrap.ps1  render_cards.ps1  seed_history.py  seed_odoo.py  seed_vault.py  trigger_ceo_briefing.py  trigger_subscription_audit.py
watchers/: __init__.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  whatsapp_watcher.py
(+31 files in other folders)
